feat: support new parameter for create application
